@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2009, 2010, 2012, 2014-2018 Laboratoire de
+# Copyright (C) 2009, 2010, 2012, 2014-2019 Laboratoire de
 # Recherche et Développement de l'Epita (LRDE).
 # Copyright (C) 2003, 2004 Laboratoire d'Informatique de Paris 6 (LIP6),
 # département Systèmes Répartis Coopératifs (SRC), Université Pierre
@@ -386,6 +386,25 @@ digraph "G(Fa & Fb)" {
   0 -> 0 [label="!a & b\n❶"]
   0 -> 0 [label="a & !b\n⓿"]
   0 -> 0 [label="a & b\n⓿❶"]
+}
+EOF
+diff output expected
+
+ltl2tgba -dbang 'GFa & GFb' >output
+cat output
+cat >expected <<EOF
+digraph "G(Fa & Fb)" {
+  rankdir=LR
+  label="G(Fa & Fb)\nInf(⓿)&Inf(❶)\n[gen. Büchi 2]"
+  labelloc="t"
+  node [shape="circle"]
+  I [label="", style=invis, width=0]
+  I -> 0
+  0 [label="0"]
+  0 -> 0 [label=""]
+  0 -> 0 [label="❶"]
+  0 -> 0 [label="⓿"]
+  0 -> 0 [label="⓿❶"]
 }
 EOF
 diff output expected
